2009-06-29  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/ContactsUI.js: Added drag & drop support!

2009-06-26  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactsListViewContainer.[hm]: this class was
	removed along with the template and moved to UIxContactFoldersView.

2009-06-26  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/UIxPreferences.js: Fixed a bug when
	ComposeMessagesType isn't set, removed an "alert"

2009-06-25  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailReply.m: Added proper blockquote
	* UI/WebServerResources/UIxMailEditor.js: Use CKeditor
	* SoObjects/Mailer/SOGoMailForward.m: Added htmlComposition property,
	changed almost all methods to escape what needsto be escaped.
	* UI/WebServerResources/UIxPreferences.js: Fixed CKeditor toggle issue

2009-06-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m (-davSyncCollection:): certain
	dav attribute methods do not necessitate additional fields, we
	declare their corresponding fields to "". Also, we make sure those
	fake fields are not specified in the SQL query and we ensure all
	the fields are only requested once each.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(+initialize): we no longer need reportQueryFields nor
	reducedReportQueryFields.
	(-davCalendarQuery:,-davCalendarMultiget:): automatically include
	"c_component" in the requested fields, so that items can be
	instantiated properly.

2009-06-23  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/NSString+Mail.m (stringByConvertingCRLNToHTML): Added
	* UI/MailPartViewers/UIxMailPartTextViewer.m (stringByConvertingCRLNToHTML): 
		Removed 
	* SoObjects/Mailer/SOGoDraftObject.m: Added support for html content type
	* SoObjects/Mailer/SOGoMailObject+Draft.m: Added support for html content
	type in mail reply
	* SoObjects/Mailer/SOGoMailReply.m: Added support for html in mail editor